Imprecise timeline frame selection using mouse #50904

Closed
opened 2017-03-09 18:11:55 +01:00 by Marius Eugen Mihai · 6 comments

System Information
Windows 10 64Bit
GeForce GTX 1080

Blender Version
Broken: 2.78.4 9e566b0 (Date 2017-03-07)
[Earliest occurrence of the bug I could find was in version 2.78.4 9992e6a (Date: 2017-02-18)]
Worked: 2.78.4 5552e83 (Date: 2017-02-11)

Short description of error

Clicking with the mouse in the timeline near a line indicating the frame always puts the cursor at the frame to the left of the point clicked with the mouse pointer.

Exact steps for others to reproduce the error

Start Blender. The default scene is fine to show the problem.

In the timeline, at the bottom, change the "End" value of the animation from 250 to a smaller value (lets say 20, for example). Then hit the "Home" key to fit that interval on the entire timeline. This makes it easier to spot the issue.

Now click near the 10 frame line, for example. If you clicked to the right of the line, the cursor will jump to the 10-th frame, as expected. If you clicked to the left of the line, regardless of how close you were to the line (even one pixel), the cursor will jump to frame 9.

Notes:

In earlier versions of Blender, the cursor would behave more intuitively, jumping to the frame closest to the point you've clicked.
If this change was by design, say, for example, the 10-th frame is considered to be the whole interval between line 10 and 11, this is counter-intuitive and make the interaction with the interface somewhat uncomfortable.
If the frame numbers were between the lines, rather than directly underneath them, then this would make this new form of interaction a bit more intuitive, but still not as good as the old way. In the case of frames where the numbers are not displayed (as it happens when the number of frames in the timeline increases and frame numbers get displayed only at certain intervals), the old way is still the best way to select the frames with no numbers displayed, because you intuitively try to click on the line, not the blank space.

Thank you for the time you put in developing this wonderful program!

**System Information** Windows 10 64Bit GeForce GTX 1080 **Blender Version** Broken: 2.78.4 9e566b0 (Date 2017-03-07) [Earliest occurrence of the bug I could find was in version 2.78.4 9992e6a (Date: 2017-02-18)] Worked: 2.78.4 5552e83 (Date: 2017-02-11) **Short description of error** Clicking with the mouse in the timeline near a line indicating the frame always puts the cursor at the frame to the left of the point clicked with the mouse pointer. **Exact steps for others to reproduce the error** Start Blender. The default scene is fine to show the problem. In the timeline, at the bottom, change the "End" value of the animation from 250 to a smaller value (lets say 20, for example). Then hit the "Home" key to fit that interval on the entire timeline. This makes it easier to spot the issue. Now click near the 10 frame line, for example. If you clicked to the right of the line, the cursor will jump to the 10-th frame, as expected. If you clicked to the left of the line, regardless of how close you were to the line (even one pixel), the cursor will jump to frame 9. Notes: In earlier versions of Blender, the cursor would behave more intuitively, jumping to the frame closest to the point you've clicked. If this change was by design, say, for example, the 10-th frame is considered to be the whole interval between line 10 and 11, this is counter-intuitive and make the interaction with the interface somewhat uncomfortable. If the frame numbers were between the lines, rather than directly underneath them, then this would make this new form of interaction a bit more intuitive, but still not as good as the old way. In the case of frames where the numbers are not displayed (as it happens when the number of frames in the timeline increases and frame numbers get displayed only at certain intervals), the old way is still the best way to select the frames with no numbers displayed, because you intuitively try to click on the line, not the blank space. Thank you for the time you put in developing this wonderful program!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MariusEugenMihai

Added subscriber: @MariusEugenMihai
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Thanks for helping narrow this down to a nice tidy window. It really helped looking for the cause. :)

Looks like it was caused by 3e628eefa9

I agree this new behaviour sucks. Looking into this, there isn't any reason why the non-subframe mode must always truncate downwards. The only effect is that it makes it harder to target a particular frame quickly (e.g. hand shake and a high res monitor would be enough to cause some issues).

Thanks for helping narrow this down to a nice tidy window. It really helped looking for the cause. :) Looks like it was caused by 3e628eefa9 I agree this new behaviour sucks. Looking into this, there isn't any reason why the non-subframe mode *must* always truncate downwards. The only effect is that it makes it harder to target a particular frame quickly (e.g. hand shake and a high res monitor would be enough to cause some issues).

This issue was referenced by 17689f8bb6

This issue was referenced by 17689f8bb6df2421211173b1b7963b6d53ad4e41
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50904
No description provided.